Avoid default section spacing for h3 sections

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -279,6 +279,10 @@ section {
   margin-bottom: 5em;
 }
 
+section .level3 {
+  margin-bottom: 0;
+}
+
 select, .area-select input, .area-select ul {
   width: 175px;
   min-height: 25px;
